--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -50,7 +50,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\X2.xml</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>3316C9BF24A77CA26472E3D2AD9C16478A226EE3</ManifestCertificateThumbprint>
@@ -98,6 +99,7 @@
     <Compile Include="QATestLauncher.cs" />
     <Compile Include="DeepClone.cs" />
     <Compile Include="Operations.cs" />
+    <Compile Include="QATestSetup.cs" />
     <Compile Include="XlsxReader.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -105,7 +107,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Globals.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
