--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OpActions.cs" />
     <Compile Include="CsvReader.cs" />
     <Compile Include="QATestLauncher.cs" />
     <Compile Include="DeepClone.cs" />
