refaktoryzacja krok 1: IQATestLaunchPoint (6 metod); Form1 implementuje IQATestLaunchPoint; QATestLauncher bierze argument konstruktora typu IQATestLaunchPoint, a nie Form1

--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IQATestLaunchPoint.cs" />
     <Compile Include="OpActions.cs" />
     <Compile Include="CsvReader.cs" />
     <Compile Include="QATestLauncher.cs" />
