zmiana nazwy: QATestSetup -> QATestStuff QATestStuff ma teraz test plan pasek postępu, kosmetyczne zmiany w tekstach

--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -101,7 +101,7 @@
     <Compile Include="QATestLauncher.cs" />
     <Compile Include="DeepClone.cs" />
     <Compile Include="Operations.cs" />
-    <Compile Include="QATestSetup.cs" />
+    <Compile Include="QATestStuff.cs" />
     <Compile Include="XlsxReader.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
