zalążek walidatora dla planu testów w formie tablicy

--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -102,6 +102,7 @@
     <Compile Include="DeepClone.cs" />
     <Compile Include="Operations.cs" />
     <Compile Include="QATestStuff.cs" />
+    <Compile Include="Validator.cs" />
     <Compile Include="XlsxReader.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
