niedokończona klasa SideReader.cs - xpath, może value albo text, może funkcja mapująca/tłumacząca, osadzić w osobnym narzędziu/module, wybór plików we/wy w ui >> zostały dociągnięty nuget chrome w form >> i wciągnięte ręcznie dependency odpowiedzialne za serializację jsona

--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -78,6 +78,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -95,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SideReader.cs" />
     <Compile Include="IQATestLaunchPoint.cs" />
     <Compile Include="OpActions.cs" />
     <Compile Include="CsvReader.cs" />
