--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{23C44EEC-2F9E-45FA-BC07-24696F124890}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>X2</RootNamespace>
-    <AssemblyName>X2</AssemblyName>
+    <AssemblyName>QA Cat</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -96,6 +96,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form2SideConverter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2SideConverter.Designer.cs">
+      <DependentUpon>Form2SideConverter.cs</DependentUpon>
+    </Compile>
     <Compile Include="SideReader.cs" />
     <Compile Include="IQATestLaunchPoint.cs" />
     <Compile Include="OpActions.cs" />
@@ -120,6 +126,9 @@
     <Compile Include="TestPlanFromDataTable.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2SideConverter.resx">
+      <DependentUpon>Form2SideConverter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
