--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -96,11 +96,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataBaseReaderWriter.cs" />
     <Compile Include="Form2SideConverter.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form2SideConverter.Designer.cs">
       <DependentUpon>Form2SideConverter.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form3Tray.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3Tray.Designer.cs">
+      <DependentUpon>Form3Tray.cs</DependentUpon>
     </Compile>
     <Compile Include="SideReader.cs" />
     <Compile Include="IQATestLaunchPoint.cs" />
@@ -110,6 +117,7 @@
     <Compile Include="DeepClone.cs" />
     <Compile Include="Operations.cs" />
     <Compile Include="QATestStuff.cs" />
+    <Compile Include="TestManager.cs" />
     <Compile Include="Validator.cs" />
     <Compile Include="XlsxReader.cs" />
     <Compile Include="Form1.cs">
@@ -129,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2SideConverter.resx">
       <DependentUpon>Form2SideConverter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form3Tray.resx">
+      <DependentUpon>Form3Tray.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
