settings w pliku, work in progress: TODO: obsługa błędow podczas odczytu jsona z ustawieniami dokończyć customErrors - problem z deserializacją do słownika podmienić settings na prefs z pliku - tam, gdzie używane jest Settings.[cośtam] ma być Prefs.Settings.[cośtam]

--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -99,6 +99,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Prefs.cs" />
     <Compile Include="ReaderWriterDataBase.cs" />
     <Compile Include="Form2SideConverter.cs">
       <SubType>Form</SubType>
