--- a/X2/packages.config
+++ b/X2/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="79.0.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="76.0.3809.68" targetFramework="net461" />
