--- a/X2/X2.csproj
+++ b/X2/X2.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{23C44EEC-2F9E-45FA-BC07-24696F124890}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>X2</RootNamespace>
-    <AssemblyName>QACat</AssemblyName>
+    <AssemblyName>CPTEST</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -66,7 +66,7 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Cat.ico</ApplicationIcon>
+    <ApplicationIcon>selenium_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>
@@ -183,6 +183,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Cat.ico" />
+    <Content Include="selenium_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
